@@ -15,24 +15,24 @@
 	<include base="ReactOS">.</include>
 	<include base="ReactOS">w32api/include</include>
 	<define name="_X86_" />
-	<file switches="-o">svcctl.idl</file>
+	<file switches="--oldnames">svcctl.idl</file>
 </module>
 <module name="scm_client" type="rpcclient">
 	<include base="ReactOS">.</include>
 	<include base="ReactOS">w32api/include</include>
 	<define name="_X86_" />
-	<file switches="-o">svcctl.idl</file>
+	<file switches="--oldnames">svcctl.idl</file>
 </module>
 <module name="eventlog_server" type="rpcserver">
 	<include base="ReactOS">.</include>
 	<include base="ReactOS">w32api/include</include>
 	<define name="_X86_" />
-	<file switches="-o">eventlogrpc.idl</file>
+	<file switches="--oldnames">eventlogrpc.idl</file>
 </module>
 <module name="eventlog_client" type="rpcclient">
 	<include base="ReactOS">.</include>
 	<include base="ReactOS">w32api/include</include>
 	<define name="_X86_" />
-	<file switches="-o">eventlogrpc.idl</file>
+	<file switches="--oldnames">eventlogrpc.idl</file>
 </module>
 </group>
